@@ -1,4 +1,11 @@
 package com.whut.java1;
 
+/**
+ * 测试：大对象直接进入老年代
+ * -Xms60m -Xms60m -XX:NewRatio=2 -XX:SurvivorRatio=8 -XX:+PrintGCDetails
+ */
 public class YoungOldAreaTest {
+    public static void main(String[] args) {
+        byte[] buffer = new byte[1024 * 1024 * 20]; // 20m
+    }
 }
